fix z-index of cartoverlay

--- a/my-app/src/styles/_header.scss
+++ b/my-app/src/styles/_header.scss
@@ -10,9 +10,11 @@
 
   #{&}-left-container {
     align-items: center;
+    background: $background-color;
     display: flex;
     gap: 32px;
     height: 100%;
+    z-index: 4;
 
     a {
       color: $primary-color;
@@ -37,6 +39,7 @@
   }
 
   #{&}-center-container {
+    z-index: 4;
     img {
       height: 30.18px;
       width: 31.16px;
@@ -52,6 +55,7 @@
     .currency-switcher {
       &-header {
         position: relative;
+        z-index: 4;
 
         button {
           background: $background-color;
@@ -94,6 +98,7 @@
         position: absolute;
         top: 60px;
         width: 114px;
+        z-index: 4;
 
         button {
           background: $background-color;
@@ -120,17 +125,21 @@
       z-index: 3;
       .fade-background {
         background: rgba(57, 55, 72, 0.22);
-        min-height: 100vh;
-        left: -117px;
-        margin: 0;
-        position: absolute;
-        top: 79px;
+        position: fixed;
+        height: 100vh;
+        left: 0;
+        // min-height: 100vh;
+        // left: -117px;
+        // margin: 0;
+        // position: absolute;
+        // top: 79px;
         width: 100vw;
         z-index: 3;
       }
 
       &-header {
         position: relative;
+        z-index: 4;
 
         button {
           background: $background-color;
@@ -174,7 +183,7 @@
         position: absolute;
         top: 79px;
         width: 325px;
-        z-index: 3;
+        z-index: 4;
 
         &-title {
           font-size: 16px;
